# league

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  go.mod
cmd/: BUILD.bazel  main.go  server_test.go
pkg/matrix/: BUILD.bazel  matrix.go  matrix_test.go
test/: BUILD.bazel  matrix_test.go
test/test_data/: non_integer.csv
