load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/palak92/league/cmd",
    visibility = ["//visibility:private"],
    deps = ["//pkg/matrix"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["server_test.go"],
    embed = [":cmd_lib"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
