load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "matrix",
    srcs = ["matrix.go"],
    importpath = "github.com/palak92/league/pkg/matrix",
    visibility = ["//visibility:public"],
)

go_test(
    name = "matrix_test",
    srcs = ["matrix_test.go"],
    embed = [":matrix"],
)
